@@ -36,7 +36,11 @@ Changes in SG 1.1
 - Added sine "pendulum style" rotation to func_rotating
 - Number of curve's subdivisions has been raised to improve visual quality
 - Added to system/graphics menu an entry for far-clipping, map Level Of Detail, and curves details
-- Falling damage are now progressive
+- Now falling damage are progressive
+- Allow to customize shaders instruction "tcgen environment", now: 
+	- "tcgen environment_X" use X-axis (the default, same as "tcgen environment")
+	- "tcgen environment_Y" use Y-axis
+	- "tcgen environment_Z" use Z-axis (this one could be really usefull for reflecting water)
 
 Changes in SG 1.1b4-20100116
 ******************
